# template-shaders-opengl

./: .clang-format  .clangd  CMakeLists.txt  LICENSE  init_cmake.sh
src/: common.h  main.cpp  ui.cpp  ui.h
